--- a/juancotera/style.css
+++ b/juancotera/style.css
@@ -21,3 +21,10 @@ body {
   overflow: hidden;
   margin: 8 0;
 }
+
+a {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: .8rem;
+  text-decoration: none;
+  color: var(--blue);
+}
