--- a/alvaroestebanherrera/css/style.css
+++ b/alvaroestebanherrera/css/style.css
@@ -82,7 +82,7 @@ h1 {
 .form-forgot-password {
   font-weight: 900;
   font-size: 16px;
-  padding: 10px 0;
+  padding: 4px 0;
 }
 
 .blue-button {
@@ -92,7 +92,7 @@ h1 {
   border: none;
   padding: 12px;
   color: white;
-  margin: 16px 0;
+  margin: 12px 0;
   font-size: 16px;
   border-radius: 30px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -103,6 +103,7 @@ h1 {
   width: 100%;
   height: 10px;
   border-bottom: 1px solid #666666; text-align: center;
+  margin-bottom: 16px;
 }
 
 .or-span {
@@ -113,6 +114,7 @@ h1 {
   padding: 0 5px;
 }
 
+/*
 .google-button {
   width: 100%;
   height: 40px;
@@ -147,4 +149,51 @@ h1 {
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: 0px 0px;
+}
+*/
+
+.button-box {
+  padding: 12px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 30px;
+  cursor: pointer;
+  margin: 12px auto;
+  background: white;
+  color: #666666;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+}
+
+/* Center button objects */
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.google-image {
+  height: 25px;
+  width: 25px;
+  margin-left: 20%;
+}
+.google-heading {
+  color: #666666;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+}
+
+.apple-image {
+  height: 25px;
+  width: 35px;
+  margin-left: 50px;
+}
+
+.apple-heading {
+  color: #666666;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
 }
