--- a/Andres-Cuellar/style.css
+++ b/Andres-Cuellar/style.css
@@ -30,6 +30,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .login__form {
   display: flex;
   flex-direction: column;
@@ -79,7 +80,7 @@ input:focus {
   color: #0a66c2;
   margin-bottom: 15px;
 }
-.login__btn {
+.login__form__btn {
   border-radius: 50px;
   background-color: var(--primaryColor);
   color: #fff;
@@ -87,7 +88,7 @@ input:focus {
   font-weight: 700;
 }
 
-.login__btn:hover {
+.login__form__btn:hover {
   background-color: var(--secondaryColor);
 }
 
@@ -121,6 +122,7 @@ button {
   border: #9c9c9c 1px solid;
   vertical-align: text-bottom;
 }
+
 img {
   width: 18px;
   height: auto;
